--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -33,7 +33,7 @@
         android:id="@+id/textView5"
         android:layout_width="352dp"
         android:layout_height="29dp"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="20dp"
         android:text="Here Some Recommendations for You"
         android:textSize="18sp"
@@ -47,7 +47,7 @@
         android:layout_width="364dp"
         android:layout_height="38dp"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="80dp"
         android:text="Hi Othmane,"
         android:textSize="29sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -66,9 +66,9 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
-        android:layout_width="395dp"
-        android:layout_height="530dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="474dp"
+        android:layout_marginTop="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
