--- a/app/src/main/res/layout/activity_search_screen.xml
+++ b/app/src/main/res/layout/activity_search_screen.xml
@@ -8,21 +8,23 @@
 
     <Button
         android:id="@+id/set_search_params_btn"
-        android:layout_width="62dp"
-        android:layout_height="60dp"
+        android:layout_width="60dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="28dp"
+        android:onClick="searchOffers"
         app:icon="?android:attr/actionModeWebSearchDrawable"
         app:iconPadding="0dp"
-        app:iconSize="33dp"
+        app:iconSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.279"
+        app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toEndOf="@+id/job_search_input"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/job_search_input"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="68dp"
+        android:layout_width="251dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="28dp"
         android:ems="10"
         android:hint="Enter Search Keyword"
@@ -31,10 +33,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="411dp"
-        android:layout_height="621dp"
+        android:id="@+id/searchResultRecyclerView"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        app:layout_constraintTop_toBottomOf="@+id/job_search_input"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/job_search_input" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
