Adding insights screen recommender

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -3,21 +3,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
-    <Button
+    <TextView
         android:id="@+id/button_sign_up3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="110dp"
+        android:layout_height="45dp"
         android:layout_marginTop="70dp"
-        android:backgroundTint="@color/primary"
+        android:background="@drawable/button_pbg"
+        android:gravity="center_horizontal"
         android:onClick="signIn"
+        android:padding="10dp"
         android:text="Sign In"
         android:textAllCaps="false"
+        android:textColor="@color/whiteTextColor"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/layout_user_password"></Button>
+        app:layout_constraintTop_toBottomOf="@+id/layout_user_password" />
 
     <LinearLayout
         android:id="@+id/layout_user_password"
