--- a/app/src/main/res/layout/activity_skills_form.xml
+++ b/app/src/main/res/layout/activity_skills_form.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/_32_3"
     android:onClick="skipStep"
     tools:context=".Main.SkillsFormActivity"
     tools:layout_editor_absoluteX="7dp"
@@ -55,28 +56,41 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/skillsText" />
 
-    <Button
+    <TextView
         android:id="@+id/skillsNextBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="112dp"
+        android:layout_width="110dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="108dp"
+        android:layout_marginEnd="32dp"
+        android:background="@drawable/button_pbg"
+        android:gravity="center_horizontal"
         android:onClick="storeUserSkills"
+        android:padding="10dp"
         android:text="Next"
         android:textAllCaps="false"
+        android:textColor="@color/whiteTextColor"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
-    <Button
+    <TextView
         android:id="@+id/skipBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_width="110dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="108dp"
+        android:background="@drawable/button_pbg"
+        android:gravity="center_horizontal"
         android:onClick="skipStep"
+        android:padding="10dp"
         android:text="Skip"
         android:textAllCaps="false"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/whiteTextColor"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/skillsNextBtn"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/skillsNextBtn" />
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 </androidx.constraintlayout.widget.ConstraintLayout>
