--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -4,19 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primary"
+    android:background="@drawable/_32_2"
     tools:context=".Auth.SignInActivity">
 
-    <Button
+    <TextView
         android:id="@+id/button2"
         android:layout_width="110dp"
         android:layout_height="45dp"
+        android:layout_margin="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="32dp"
-        android:background="@drawable/costum_btn"
+        android:background="@drawable/button_pbg"
+        android:gravity="center_horizontal"
         android:onClick="signUpBtnClick"
+        android:padding="10dp"
         android:text="Sign Up"
         android:textAllCaps="false"
+        android:textColor="@color/whiteTextColor"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -26,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="304dp"
         android:text="Find a Perfect"
-        android:textColor="@color/white"
+        android:textColor="@color/primary"
         android:textSize="34sp"
         android:textStyle="normal"
         android:visibility="visible"
@@ -41,7 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="148dp"
         android:text="Job Match."
-        android:textColor="@color/white"
+        android:textColor="@color/primary"
         android:textSize="34sp"
         android:textStyle="normal"
         android:visibility="visible"
@@ -58,21 +64,28 @@
         android:layout_height="94dp"
         android:layout_marginTop="8dp"
         android:text="One place with the best  jobs companies in tech. Apply to all of them with a single profile and get in touch with hirinig managers directly."
-        android:textColor="@color/white"
+        android:textColor="@color/primary"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="@+id/app_name_sign_in"
         app:layout_constraintTop_toBottomOf="@+id/app_name_sign_in" />
 
-    <Button
+    <TextView
         android:id="@+id/button"
         android:layout_width="110dp"
         android:layout_height="45dp"
+        android:layout_margin="10dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/costum_btn"
+        android:layout_marginEnd="32dp"
+        android:background="@drawable/button_pbg"
+        android:gravity="center_horizontal"
         android:onClick="signInBtnClick"
+        android:padding="10dp"
         android:text="Sign In"
         android:textAllCaps="false"
+        android:textColor="@color/whiteTextColor"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
