--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        android:text="Copyright@2021 othayou"
+        android:text="Copyright@2021 othmanehanyf"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="normal"
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:text="JobScrap"
+        android:text="JobScraper"
         android:textColor="@color/primary"
         android:textSize="40dp"
         android:textStyle="bold"
