--- a/app/src/main/res/layout/cluster_recycler_row.xml
+++ b/app/src/main/res/layout/cluster_recycler_row.xml
@@ -24,12 +24,12 @@
             android:layout_gravity="center_vertical"
             >
 
-            <ImageView android:id="@+id/thumbImage"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+            <ImageView
+                android:id="@+id/thumbImage"
+                android:layout_width="120dp"
+                android:layout_height="100dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_margin="10dp"
-                />
+                android:layout_margin="10dp" />
             <TextView android:id="@+id/clusterNum"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -51,20 +51,20 @@
                 android:layout_marginEnd="10dp"
                 />
 
-            <TextView android:id="@+id/viewOffersBtn"
+            <TextView
+                android:id="@+id/viewOffersBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                android:textColor="@color/white"
+                android:layout_margin="10dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
-                android:text="View Offers"
                 android:background="@drawable/button_pbg"
-                android:layout_margin="10dp"
-                android:padding="10dp"
                 android:gravity="center_horizontal"
-                />
+                android:padding="10dp"
+                android:text="View Offers"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
